# testimony

./: .gitignore  Dockerfile  README.md  action.yaml  openqa_classifier.h5  pyproject.toml
.github/workflows/: container.yaml  test.yaml
testimony/: __main__.py  cli.py  job.py  model.py
