# SPDX-FileCopyrightText: 2024 Liv Dywan <liv.dywan@suse.com>
#
# SPDX-License-Identifier: EUPL-1.2

[tool.poetry]
name = "testimony"
version = "0.1.0"
description = "Make educated guesses based on (openQA) test results"
authors = ["Liv Dywan"]
license = "EUPL-1.2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tensorflow = "^2.18.0"
pyyaml = "^6.0.2"
h5py = "^3.12.1"

[tool.poetry.group.dev.dependencies]
flake8-black = "^0.3.6"
flake8-pylint = "^0.2.1"
reuse = "^4.0.3"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
testimony="testimony.__main__:__main__"
